--- a/PawMap/src/main/resources/static/css/style-mye.css
+++ b/PawMap/src/main/resources/static/css/style-mye.css
@@ -10,11 +10,14 @@
       padding-right: 15px;
       padding-left: 15px;
       margin-right: 10%;
-      margin-left: 5%;
       margin-bottom: auto;
 
 	  
     }
+	.petProfile:hover{
+		background-color:#eecd90;
+		color: white;
+	}
 	.petboard{
 		margin-top:150px;
 	}
@@ -146,15 +149,15 @@
 		display:inline;
 		position : relative;
 		float : left;
-		margin : 3%;
 		border-color: white;
 		border-style: solid;
 		border-width: 1px;
 		text-align: center;
 	}
 	.btn_box:hover{
-		background-color: #eecd90;
+		background-color: #eecd9048;
 		color: white;
+		border-color: #eecd90;
 		
 	}
 
@@ -332,8 +335,15 @@ nav.navbar.navbar-inverse {
 	color: #f9f3e3;
 
   }
+
+
+  .nav-p-login:hover{
+	  /* font-size: 110%; */
+	  color:white;
+	  font-weight: bold;
+}
   #attr-nav-i {
-	  font-size: 0.9em;
+	font-size: 0.9em;
   }
   #attr-nav-p:hover {
 	color: #EFC778;
@@ -419,8 +429,10 @@ nav.navbar.navbar-inverse {
     a { color:#000000;text-decoration:none; }
     .scriptCalendar { text-align:center;  }
     .scriptCalendar > thead > tr > td { width:50px;height:50px; }
-    .scriptCalendar > thead > tr:first-child > td { font-weight:bold; }
-    .scriptCalendar > thead > tr:last-child > td { background-color:#eecd90; }
+    .scriptCalendar > thead > tr:first-child > td { font-weight:bold; border: none;}
+    .scriptCalendar > thead > tr:last-child > .dark { background-color:#eecd90; }
+	.scriptCalendar > thead > tr:last-child > .light { background-color:#eecd906e; }
+x
   
 
     /* button */
@@ -429,16 +441,13 @@ nav.navbar.navbar-inverse {
         background-size: cover;
         height: auto;
         background-color: transparent;
-        /* margin-left: 5%;
-        margin-top: 5%;
-        position: relative; */
-        z-index: 1;
+    	margin-top: 0;
     }
 	sc {
 		align-content: center;
 	}
 	.scriptCalendarBox{
-		margin-left:4%;
+		/* margin-left:4%; */
 		width: 80%;
 	}
     .scriptCalendar{
@@ -447,26 +456,33 @@ nav.navbar.navbar-inverse {
 		margin: 3%;
 		padding: 5%;
 		padding-bottom: 20px;
-		width: 60%;
+		width: 80%;
 		margin-top: 0%;
+		border:none;
     }
+
 	.jscal {
 		max-width: 100%;
 		max-height: 100%;
 	}
     .calendar-left{
-		margin: 3%;
+		margin-left: 3%;
+		margin-right: 10%;
 		margin-top: 20px !important;
 		text-align: center;
 		align-items: center;
 		background-color: #eecd90;
 		border-radius: 50px;
 		width: 50% !important;
-		height: 40vh;
+		min-height: 40vh;
+		max-height: 80vh;
 		font-size: medium;
 		margin-bottom: 3%;
 		max-width: 100% !important;
+		min-width: 50%;
 		padding: 15px;
+		width: 60% !important;
+		
     }
 	.calendartime > li {
 		list-style: none;
@@ -476,15 +492,16 @@ nav.navbar.navbar-inverse {
 		float: left;
 	}
 	.events-times{
-		position: relative;
-		float: left;
-		padding-left: 2%;
-		padding-right: 2%;
-		line-height: 2;
-		padding-top: 2%;
-		vertical-align: top;
-		height: 40vh;
-		width: 30%;
+		position: static;
+		padding-left: 8%;
+		padding-right: 4%;
+		line-height: 1.5;
+		margin-top: 3px;
+		padding-top: 15px;
+		float: inherit;
+		align-items: center;
+		width: 33.3%;
+		padding-bottom: 5%;
 	}
     .events-times .calendar-time {
         list-style: none;
@@ -514,9 +531,9 @@ nav.navbar.navbar-inverse {
     	background: rgb(239, 199, 120) !important;
     	border:  solid rgb(239, 199, 120) !important;
     	/* color: #000 !important; */
-    	width: 35% !important;
-    	background-color: #eecd90 !important;
-    	margin-left: 5%;
+        width: 60% !important;
+		background-color: #eecd90 !important;
+		margin-left: 2%;
     	padding-left: 20px !important;
     	padding-right: 20px !important;
     	color: #fff !important;	
@@ -527,7 +544,25 @@ nav.navbar.navbar-inverse {
 		border:  solid rgb(253, 231, 189, 0.34) !important;
 		color: rgb(255, 255, 255) !important;
 	}
-
+	.calendar-member{
+	margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 20px !important;
+    text-align: center;
+    align-items: center;
+    background-color: #eecd90;
+    border-radius: 50px;
+    width: 50% !important;
+    min-height: 40vh;
+    max-height: 80vh;
+    font-size: large;
+    margin-bottom: 3%;
+    max-width: 100% !important;
+    min-width: 50%;
+    padding: 15px;
+    width: 50% !important;
+    height: 100%;
+	}
   /*
 *
 * ==========================================
@@ -551,12 +586,13 @@ nav.navbar.navbar-inverse {
 }
 /* 반려동물 등록 타이틀 */
 .boardtitle>h2{
-	line-height: 1.4;
-	text-align: center;
-	font-size: 32px;
-	color: #f1c264;
-	font-weight: 700;
-	margin-bottom: 15px;
+    padding-left: 10rem;
+    line-height: 1.4;
+    text-align: left;
+    font-size: 32px;
+    color: #f1c264;
+    font-weight: 700;
+    margin-bottom: 15px;
 }
 
 /* input박스 설정  uptxtbox참고*/
