--- a/PawMap/src/main/resources/static/css/style-login.css
+++ b/PawMap/src/main/resources/static/css/style-login.css
@@ -8402,5 +8402,19 @@ textarea.form-control {
   background-repeat : no-repeat;
   background-size :cover;
 }
+@media (max-width:1250px) {
+  body { padding: 0px; margin: 0px; }
+  /* 배경영상 설정 */
+  .jb-box { width: auto; height: 100%; z-index:0; overflow: hidden;margin: 0px auto; position: relative; }
+  video { width: auto; height: 100%;}
+  .jb-text { position: absolute; top: 1%; width: 100%; z-index: 1; background-color: rgba(58, 58, 58, 0.26); background-size: 130%;}
+  
+}
+body { padding: 0px; margin: 0px; }
+/* 배경영상 설정 */
+.jb-box { width: auto; height: 100%; z-index:0; overflow: hidden;margin: 0px auto; position: relative; }
+video { width: 100%; }
+.jb-text { position: absolute; top: 1%; width: 100%; height: 100%; z-index: 1; background-color: rgba(58, 58, 58, 0.26); background-size: 130%;}
+
 
 
