--- a/PawMap/src/main/resources/static/css/style-mye.css
+++ b/PawMap/src/main/resources/static/css/style-mye.css
@@ -1,5 +1,7 @@
 
-    .petInfoContainer {
+ /* petProfile @media */
+ @media (min-width:900px){  
+   .petInfoContainer {
       padding: 0;
       width: 1200px;
       max-width: 100%; 
@@ -11,9 +13,17 @@
       padding-left: 15px;
       margin-right: 10%;
       margin-bottom: auto;
-
-	  
     }
+}
+
+@media (max-width: 899px )and (min-width:715px){
+	.petInfoContainer {
+		padding: 0;
+		width: 900px;
+		height: auto;
+		object-fit: cover;
+	  }
+	}
 	.petProfile:hover{
 		background-color:#eecd90;
 		color: white;
@@ -38,7 +48,6 @@
 	}
 	.petProfile {
 		width:100%;
-		height:250px;
 		display:inline;
 		position : relative;
 		float : left;
@@ -162,8 +171,62 @@
 	}
 
 
-
-/* index page css */
+/* petProfile @media */
+@media (max-width: 614px ){
+	.petInfoContainer {
+		padding: 0;
+		width: 90%;
+		height: auto;
+		object-fit: cover;
+	  }
+  
+	  .petInfoList {
+		  width:100%;
+		  padding:0%;
+	  }
+	  .petProfile {
+		  width:100%;
+		  display:inline;
+		  position : relative;
+		  float : left;
+		  margin-top : 1%;
+		  margin-left: 0;
+		  margin-right: 0;
+		  padding:0%;
+		  border-color: white;
+		  border-style: solid;
+		  border-width: 1px;
+		  text-align: center;
+		  line-height: 1.5;
+	  }
+	  
+  .petProfileimg {
+	  border-radius: 0%;
+	  width: 20vw;
+	  overflow: hidden;
+	  size: cover;
+  }
+	  .petimagebox {
+		  overflow: hidden;
+			border-radius: 70%;
+		  width: 250px;
+		  height: 250px;
+		  margin-left: 24%;
+		  
+		  
+	  }
+	  .petimage{
+		  width:100%;
+			  height:100%;
+		  object-fit:cover;
+	  }
+	  
+	  .petProfileText {
+		  margin:4%;
+		  vertical-align: center;
+  
+	  }
+}
 
 
   /*
@@ -176,11 +239,6 @@
 .navbar {
     transition: all 0.4s;
 }
-
-.navbar .nav-link {
-    color: #f9f3e3;
-}
-
 
 .navbar .nav-link:hover {
     color:#fdd572;
@@ -210,21 +268,28 @@
 }
 
 .navbar.active .navbar-brand {
-    color: #555;
+    color: rgb(245, 245, 245);
 }
 
-
-/* Change navbar styling on small viewports */
-@media (max-width: 991.98px) {
-    .navbar {
-        background: #fff;
-    }
-
-    .navbar .navbar-brand, .navbar .nav-link {
-        color: #555;
-    }
+.attr-nav{
+	padding-left: 0;
 }
-
+.attrnine{
+	padding-right: 0;
+}
+@media (max-width: 991.98px ),( min-width: 614px){
+.attr-nav {
+    text-align:right;
+}
+.navbar .nav-link{
+	color: #555;
+}
+}
+@media (min-width:992px){
+	.navbar .nav-link {
+		color: #f9f3e3;
+	}
+}
 
 
 /*
@@ -345,6 +410,15 @@ nav.navbar.navbar-inverse {
   #attr-nav-i {
 	font-size: 0.9em;
   }
+
+  @media (max-width: 991.98px ),( min-width: 614px){
+	#attr-nav-i {
+		font-size: 1em;
+		margin-top:1em;
+
+	  }
+}
+
   #attr-nav-p:hover {
 	color: #EFC778;
   }
