--- a/PawMap/src/main/resources/static/css/style-login.css
+++ b/PawMap/src/main/resources/static/css/style-login.css
@@ -8405,8 +8405,8 @@ textarea.form-control {
 @media (max-width:1250px) {
   body { padding: 0px; margin: 0px; }
   /* 배경영상 설정 */
-  .jb-box { width: auto; height: 100%; z-index:0; overflow: hidden;margin: 0px auto; position: relative; }
-  video { width: auto; height: 100%;}
+  .jb-box { width: 100%; height: 100%; padding:0; z-index:0; overflow: hidden; margin: 0px auto; position: relative; }
+  video { height: 100%;   width:100%; object-fit:cover;}
   .jb-text { position: absolute; top: 1%; width: 100%; z-index: 1; background-color: rgba(58, 58, 58, 0.26); background-size: 130%;}
   
 }
