--- a/PawMap/src/main/resources/static/css/custom-jaeseok.css
+++ b/PawMap/src/main/resources/static/css/custom-jaeseok.css
@@ -105,6 +105,7 @@ a:link {
   justify-content: space-evenly;
   margin-bottom: 15rem;
   box-sizing: unset !important;
+  align-items: center;
 }
 
 .custom_aboutUs_textBox {
